# human_robot_collaboration

./: .gitignore  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  INSTALL.md  README.md  STYLE_GUIDE.md  catkin-workspace-tutorial.md  dependencies.rosinstall  install-tutorial  package.xml  setup.py
baxter_collaboration/: CMakeLists.txt  controller.py  graph_policy_controller.py  package.xml  rosconsole.conf  service_request.py  suscribers.py  timer.py
baxter_collaboration/baxter_collaboration/: controller.py  suscribers.py
baxter_collaboration/launch/: baxter_controller.launch  baxter_marker_publisher.launch  flatpack_furniture.launch  modular_furniture.launch  speech_prediction.launch  tower_building.launch
baxter_collaboration/lib/: CMakeLists.txt
baxter_collaboration/scripts/: generate_pomdp  hold_and_release  icra_experiment  remote_control_node  supportive.py  tower_experiment
baxter_collaboration/src/: baxter_display.cpp  gripper_keyboard.cpp
baxter_collaboration/src/baxter_controller/: baxter_controller.cpp
baxter_collaboration/src/flatpack_furniture/: action_provider.cpp  artag_ctrl_impl.h  hold_ctrl_impl.cpp  hold_ctrl_impl.h
baxter_collaboration/src/modular_furniture/: action_provider.cpp  part_picker.cpp  part_picker.h  tool_picker.cpp  tool_picker.h
baxter_collaboration/src/tower_building/: action_provider.cpp  cube_picker.cpp  cube_picker.h
baxter_collaboration/web-interface/baxter_collaboration/: ros.js
baxter_collaboration/web-interface/speech_predicition/: .#interface.html  .#test.js  interface.html  interface.js  ros.js  ros2.js  tables.js
baxter_collaboration/web-interface/tower_building/: ros.js
baxter_collaboration/web-interface/wizard_of_oz/: wizard_of_oz.js
baxter_collaboration_lib/: CMakeLists.txt  CMakeLists.txt~  package.xml
baxter_collaboration_lib/include/robot_interface/: arm_ctrl.h  gripper.h  robot_interface.h
baxter_collaboration_lib/include/robot_perception/: cartesian_estimator.h  cartesian_estimator_client.h  cartesian_estimator_hsv.h  hsv_detection.h
baxter_collaboration_lib/include/robot_utils/: baxter_trac_ik.h  particle_thread.h  ros_thread_image.h  rviz_publisher.h  thread_safe.h  utils.h
baxter_collaboration_lib/launch/: baxter_urdf.launch
baxter_collaboration_lib/src/robot_interface/: arm_ctrl.cpp  gripper.cpp  robot_interface.cpp
baxter_collaboration_lib/src/robot_perception/: cartesian_estimator.cpp  cartesian_estimator_client.cpp  cartesian_estimator_hsv.cpp
baxter_collaboration_lib/src/robot_utils/: baxter_trac_ik.cpp  particle_thread.cpp  ros_thread.cpp  ros_thread_image.cpp  ros_thread_obj.cpp  rviz_publisher.cpp  utils.cpp
baxter_collaboration_lib/test/: CMakeLists.txt  README.md  gripper_keyboard.cpp  test_arm_ctrl.cpp  test_arm_ctrl.test  test_gripper.cpp  test_gripper.test  test_particle_thread.cpp  test_particle_thread.test  test_robot_arm.cpp  test_robot_interface.cpp  test_robot_interface.test  test_ros_thread_image.cpp  test_ros_thread_image.test  test_ros_thread_obj.cpp  test_utils_lib.cpp
baxter_collaboration_msgs/: CMakeLists.txt  package.xml
baxter_collaboration_msgs/msg/: ArmState.msg  GoToPose.msg  ObjectsArray.msg
baxter_collaboration_msgs/srv/: DoAction.srv
human_robot_collaboration/: CMakeLists.txt  package.xml  setup.py
human_robot_collaboration/baxter_collaboration/: timer.py
human_robot_collaboration/human_robot_collaboration/: controller.py  graph_policy_controller.py  service_request.py  subscribers.py  suscribers.py  timer.py
human_robot_collaboration/launch/: baxter_aruco.launch  baxter_controller.launch  baxter_display.launch  chair_task.launch  flatpack_furniture.launch  modular_furniture.launch  speech_prediction.launch  tower_building.launch
human_robot_collaboration/models/: speech_model.pkl  vocab.pkl
human_robot_collaboration/scripts/: generate_pomdp  hold_and_release  icra_experiment  remote_control_node  rosbag2vec.py  speechPredictorOnline.py  supportive.py  tower_experiment  trainSpeechPredictor.py
human_robot_collaboration/src/: baxter_display.cpp
human_robot_collaboration/src/baxter_controller/: baxter_controller.cpp
human_robot_collaboration/src/chair_task/: action_provider.cpp
human_robot_collaboration/src/flatpack_furniture/: action_provider.cpp  artag_ctrl_impl.cpp  artag_ctrl_impl.h  hold_ctrl_impl.h  left_ctrl.h  right_ctrl.h
human_robot_collaboration/src/modular_furniture/: action_provider.cpp  hsv_detector.cpp  left_ctrl.h  part_picker.cpp  part_picker.h  right_ctrl.h  tool_picker.cpp  tool_picker.h
human_robot_collaboration/src/speech_prediction/: action_provider.cpp  artag_ctrl_impl.h  artag_hold_ctrl.cpp  artag_hold_ctrl.h  right_ctrl.h
human_robot_collaboration/src/tower_building/: action_provider.cpp  cube_picker.cpp  cube_picker.h  left_ctrl.h
human_robot_collaboration/web-interface/speech_predicition/: interface.html  ros.js  speech_predicition.html  speech_prediction.html  speech_prediction.js  style.css  tables.html  tables.js
human_robot_collaboration/web-interface/tower_building/: tower_building.js
human_robot_collaboration/web-interface/wizard_of_oz/: ros.js
human_robot_collaboration_lib/: CMakeLists.txt  package.xml
human_robot_collaboration_lib/include/robot_interface/: arm_ctrl.h  arm_perception_ctrl.h  gripper.h  robot_interface.h
human_robot_collaboration_lib/include/robot_perception/: aruco_client.h  cartesian_estimator.h  cartesian_estimator_hsv.h  (+3 more)
human_robot_collaboration_lib/test/: test_gripper.cpp  test_gripper.test  test_particle_thread.test  test_robot_interface.cpp  test_ros_thread_image.cpp
human_robot_collaboration_msgs/: CMakeLists.txt  package.xml
human_robot_collaboration_msgs/msg/: GoToPose.msg  Object.msg  ObjectsArray.msg
human_robot_collaboration_msgs/srv/: DoAction.srv
lib/: CMakeLists.txt
lib/src/: arm_controller.cpp  arm_controllers.cpp  arm_ctrl.cpp  artag_controller.cpp  artag_ctrl.cpp  baxter_trac_ik.cpp  gripper.cpp  hold_controller.cpp  hold_ctrl.cpp  robot_interface.cpp  ros_thread.cpp  thread.cpp  ttt_controllers.cpp  utils.cpp
(+131 files in other folders)
