<package format="2">
  <name>human_robot_collaboration_lib</name>
  <version>1.0.0</version>
  <description>Libraries for the human_robot_collaboration project</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="alessandro.roncone@yale.edu">Alessandro Roncone</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <license>LGPLv2.1</license>


  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <url type="website">https://github.com/scazlab/human_robot_collaboration</url>


  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <!-- Authors do not have to be maintianers, but could be -->
  <author email="alessandro.roncone@yale.edu">Alessandro Roncone</author>


  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>

  <depend>aruco</depend>
  <depend>aruco_ros</depend>
  <depend>human_robot_collaboration_msgs</depend>
  <depend>baxter_core_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>rosconsole</depend>
  <depend>trac_ik_lib</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
